# churn-risk-platform

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  PROJECT_SUMMARY.md  README.md  _check_fail.py  _debug_encoding.py  _final_check.py  _fix_encoding.py  _fix_lint.py  _flake8_full.py  _pytest_quick.py  _run_tests.py  _test_only.py  _test_risk.py  _verify.py  app.py  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: cd.yml  ci.yml
artifacts/: confusion_matrix.json  metrics.json
backend-csharp/: ChurnRiskAPI.csproj  Program.cs  README.md  appsettings.json
backend-csharp/Controllers/: ChurnController.cs
backend-csharp/Models/: CustomerRequest.cs  PredictionResponse.cs
backend-csharp/Services/: PythonApiService.cs
configs/: config.yaml  model_params.yaml  monitoring.yaml  processing.yaml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  PACKAGING.md
frontend-dashboard/: README.md  index.html
frontend-dashboard/css/: style.css
frontend-dashboard/js/: app.js
notebooks/: 01_analysis_and_engineering.ipynb
notebooks/artifacts/: export_metadata.json  notebook_summary.json
src/: exception.py  logger.py
src/components/: data_ingestion.py  data_transformation.py  drift_detector.py  model_evaluation.py  model_monitor.py  model_trainer.py  prediction_logger.py
src/pipeline/: predict_pipeline.py  retrain_pipeline.py  train_pipeline.py
src/utils/: common.py
tests/: conftest.py
tests/integration/: test_pipeline_integration.py
tests/unit/: test_api.py  test_common.py  test_data_ingestion.py  test_data_transformation.py  test_drift_detector.py  test_model_evaluation.py  test_model_monitor.py  test_model_trainer.py  test_predict_pipeline.py  test_prediction_logger.py  test_retrain_pipeline.py  test_train_pipeline.py
